PARSER Version 2 : Major changes in DSL parsing