@@ -4,16 +4,18 @@ import java.math.BigDecimal;
 import java.util.Properties;
 
 import org.junit.Test;
-import org.telosys.tools.dsl.AnnotationName;
+import org.telosys.tools.dsl.DslModelError;
 import org.telosys.tools.dsl.DslModelErrors;
 import org.telosys.tools.dsl.model.DslModelEntity;
+import org.telosys.tools.dsl.parser.annotation.AnnotationName;
 import org.telosys.tools.dsl.parser.model.DomainAnnotation;
+import org.telosys.tools.dsl.parser.model.DomainCardinality;
 import org.telosys.tools.dsl.parser.model.DomainEntity;
 import org.telosys.tools.dsl.parser.model.DomainEntityType;
 import org.telosys.tools.dsl.parser.model.DomainField;
 import org.telosys.tools.dsl.parser.model.DomainModel;
-import org.telosys.tools.dsl.parser.model.DomainNeutralType;
 import org.telosys.tools.dsl.parser.model.DomainNeutralTypes;
+import org.telosys.tools.dsl.parser.model.DomainType;
 import org.telosys.tools.generic.model.Attribute;
 import org.telosys.tools.generic.model.Entity;
 import org.telosys.tools.generic.model.Link;
@@ -29,14 +31,44 @@ import static org.junit.Assert.assertTrue;
 
 public class ConverterTest {
 
-	private final static String     MODEL_FILE_NAME = "test.model" ;
-	private final static Properties MODEL_PROPERTIES = null ;
+	private static final String     MODEL_FILE_NAME = "test.model" ;
+	private static final Properties MODEL_PROPERTIES = null ;
 	
-	private ModelConverter converter = new ModelConverter(new DslModelErrors());
+	private static final String     ENTITY1 = "Entity1" ;
+	private static final String     ENTITY2 = "Entity2" ;
+
+	private void print(String s) {
+		System.out.println(s);
+	}
+	private ModelConverter getModelConverter() {
+		DslModelErrors errors = new DslModelErrors();
+		return new ModelConverter(errors);
+	}
+	
+	private DomainField buildField(String fieldName, String fieldType, DomainCardinality cardinality) {
+		int lineNumber = 1 ;
+		DomainType neutralType = DomainNeutralTypes.getType(fieldType);
+		if ( neutralType != null) {
+			// Field with basic type ( string, int, etc )
+			return new DomainField(lineNumber, fieldName, neutralType );
+		}
+		else {
+			// Field with entity type ( Car, Teacher, etc )
+			DomainType entityType = new DomainEntityType(fieldType, cardinality) ;
+			return new DomainField(lineNumber, fieldName, entityType );
+		}
+	}
+	private DomainField buildField(String fieldName, String fieldType) {
+		return buildField(fieldName, fieldType, DomainCardinality.ONE);
+	}	
+	private DomainField buildFieldMany(String fieldName, String fieldType) {
+		return buildField(fieldName, fieldType, DomainCardinality.MANY);
+	}	
 
 	@Test
 	public void testEmptyModel() {
 		DomainModel domainModel = new DomainModel(MODEL_FILE_NAME, MODEL_PROPERTIES);
+		ModelConverter converter = getModelConverter();
 		Model model = converter.convertModel(domainModel);
 		
 		assertEquals("test", model.getName());
@@ -46,11 +78,10 @@ public class ConverterTest {
 	
 	private Model buildModelWithTwoEmptyEntities() {
 		DomainModel domainModel = new DomainModel(MODEL_FILE_NAME, MODEL_PROPERTIES);
-//		DomainEntity domainEntity1 = new DomainEntity("domainEntity_1");
-		domainModel.addEntity(new DomainEntity("domainEntity_1"));
-//		DomainEntity domainEntity2 = new DomainEntity("domainEntity_2");
-		domainModel.addEntity(new DomainEntity("domainEntity_2"));		
+		domainModel.addEntity(new DomainEntity(ENTITY1));
+		domainModel.addEntity(new DomainEntity(ENTITY2));		
 		//--- Convert 
+		ModelConverter converter = getModelConverter();
 		return converter.convertModel(domainModel);	
 	}
 	
@@ -61,200 +92,164 @@ public class ConverterTest {
 		assertEquals(2, model.getEntities().size());
 		
 		// entity 1
-		//Entity entity_1 = getEntityByClassName(model, "domainEntity_1");
-		Entity entity_1 = model.getEntityByClassName("domainEntity_1");
-		assertEquals("domainEntity_1", entity_1.getClassName());
+		Entity entity1 = model.getEntityByClassName(ENTITY1);
+		assertEquals(ENTITY1, entity1.getClassName());
 		
 		// attributes of entity 1
-		assertTrue(entity_1.getAttributes().isEmpty());
+		assertTrue(entity1.getAttributes().isEmpty());
 		
 		// entity 2
-		//Entity entity_2 = getEntityByClassName(model, "domainEntity_2");
-		Entity entity_2 = model.getEntityByClassName("domainEntity_2");
-		assertEquals("domainEntity_2", entity_2.getClassName());
+		Entity entity2 = model.getEntityByClassName(ENTITY2);
+		assertEquals(ENTITY2, entity2.getClassName());
 		
 		// attributes of entity 2
-		assertTrue(entity_2.getAttributes().isEmpty());
+		assertTrue(entity2.getAttributes().isEmpty());
 		
-		Entity e = model.getEntityByClassName("domainEntity_1");
+		Entity e = model.getEntityByClassName(ENTITY1);
 		assertEquals("", e.getDatabaseCatalog());
 		assertEquals("", e.getDatabaseSchema());
 		assertEquals("TABLE", e.getDatabaseType());
 		assertEquals(0, e.getDatabaseForeignKeys().size());
 
-		Entity e2 = model.getEntityByTableName("domainEntity_1");
-		assertEquals("domainEntity_1", e2.getClassName());
+		Entity e2 = model.getEntityByTableName(ENTITY1);
+		assertEquals(ENTITY1, e2.getClassName());
 	}
 	
 	@Test
-	public void testAttributeWithNeutralTypes() {
+	public void testAttributeWithNeutralTypes() throws DslModelError {
 		// Given
 		DomainModel domainModel = new DomainModel(MODEL_FILE_NAME, MODEL_PROPERTIES);
-		DomainEntity domainEntity_1 = new DomainEntity("domainEntity_1");
+		DomainEntity domainEntity1 = new DomainEntity(ENTITY1);
 
-		domainModel.addEntity(domainEntity_1);
-//		DomainEntityField domainEntityField_1_2 = new DomainEntityField("field_1_2", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-//		DomainEntityField domainEntityField_1_4 = new DomainEntityField("field_1_4", DomainNeutralTypes.getType(DomainNeutralTypes.DATE));
-//		DomainEntityField domainEntityField_1_5 = new DomainEntityField("field_1_5", DomainNeutralTypes.getType(DomainNeutralTypes.DECIMAL));
-//		DomainEntityField domainEntityField_1_6 = new DomainEntityField("field_1_6", DomainNeutralTypes.getType(DomainNeutralTypes.INTEGER));
-//		DomainEntityField domainEntityField_1_7 = new DomainEntityField("field_1_7", DomainNeutralTypes.getType(DomainNeutralTypes.STRING));
-//		DomainEntityField domainEntityField_1_8 = new DomainEntityField("field_1_8", DomainNeutralTypes.getType(DomainNeutralTypes.TIME));
-//		DomainEntityField domainEntityField_1_9 = new DomainEntityField("field_1_9", DomainNeutralTypes.getType(DomainNeutralTypes.TIMESTAMP));
-//		domainEntity_1.addField(domainEntityField_1_2);
-//		domainEntity_1.addField(domainEntityField_1_4);
-//		domainEntity_1.addField(domainEntityField_1_5);
-//		domainEntity_1.addField(domainEntityField_1_6);
-//		domainEntity_1.addField(domainEntityField_1_7);
-//		domainEntity_1.addField(domainEntityField_1_8);
-//		domainEntity_1.addField(domainEntityField_1_9);
+		domainModel.addEntity(domainEntity1);
+		domainEntity1.addField( buildField("myBoolean", DomainNeutralTypes.BOOLEAN) );
+		
+		domainEntity1.addField( buildField("myDecimal", DomainNeutralTypes.DECIMAL) );
+		domainEntity1.addField( buildField("myInteger", DomainNeutralTypes.INTEGER) );
+		
+		domainEntity1.addField( buildField("myString", DomainNeutralTypes.STRING) );
+		
+		domainEntity1.addField( buildField("myDate", DomainNeutralTypes.DATE) );
+		domainEntity1.addField( buildField("myTime", DomainNeutralTypes.TIME) );
+		domainEntity1.addField( buildField("myTimestamp", DomainNeutralTypes.TIMESTAMP));
 
-		domainEntity_1.addField( new DomainField("myBoolean", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN)) );
+		domainEntity1.addField( buildField("myBinary", DomainNeutralTypes.BINARY_BLOB) );
 		
-		domainEntity_1.addField( new DomainField("myDecimal", DomainNeutralTypes.getType(DomainNeutralTypes.DECIMAL)) );
-		domainEntity_1.addField( new DomainField("myInteger", DomainNeutralTypes.getType(DomainNeutralTypes.INTEGER)) );
-		
-		domainEntity_1.addField( new DomainField("myString", DomainNeutralTypes.getType(DomainNeutralTypes.STRING)) );
-		
-		domainEntity_1.addField( new DomainField("myDate", DomainNeutralTypes.getType(DomainNeutralTypes.DATE)) );
-		domainEntity_1.addField( new DomainField("myTime", DomainNeutralTypes.getType(DomainNeutralTypes.TIME))  );
-		domainEntity_1.addField( new DomainField("myTimestamp", DomainNeutralTypes.getType(DomainNeutralTypes.TIMESTAMP)) );
-
-		domainEntity_1.addField( new DomainField("myBinary", DomainNeutralTypes.getType(DomainNeutralTypes.BINARY_BLOB)) );
-		
-		DomainEntity domainEntity_2 = new DomainEntity("domainEntity_2");
-		domainModel.addEntity(domainEntity_2);
+		DomainEntity domainEntity2 = new DomainEntity(ENTITY2);
+		domainModel.addEntity(domainEntity2);
 		
 		// When
+		ModelConverter converter = getModelConverter();
 		Model model = converter.convertModel(domainModel);
 		
 		// Then
 		assertEquals(2, model.getEntities().size());
 		
 		// entity 1
-//		Entity entity_1 = getEntityByClassName(model, "domainEntity_1");
-		Entity entity_1 = model.getEntityByClassName("domainEntity_1");
-		assertEquals("domainEntity_1", entity_1.getClassName());
+		Entity entity1 = model.getEntityByClassName(ENTITY1);
+		assertEquals(ENTITY1, entity1.getClassName());
 		
 		// attributes of entity 1
-		assertEquals(8, entity_1.getAttributes().size());
+		assertEquals(8, entity1.getAttributes().size());
 		
-//		// Check simple type
-//		assertEquals("Boolean",    getAttributeByName(entity_1, "myBoolean").getSimpleType());
-//		assertEquals("BigDecimal", getAttributeByName(entity_1, "myDecimal").getSimpleType());
-//		assertEquals("Integer",    getAttributeByName(entity_1, "myInteger").getSimpleType());
-//		assertEquals("String",     getAttributeByName(entity_1, "myString").getSimpleType());
-//		assertEquals("Date",       getAttributeByName(entity_1, "myDate").getSimpleType());
-//		assertEquals("Date",       getAttributeByName(entity_1, "myTime").getSimpleType());
-//		assertEquals("Date",       getAttributeByName(entity_1, "myTimestamp").getSimpleType());
-//		assertEquals("byte[]",     getAttributeByName(entity_1, "myBinary").getSimpleType());
-
-//		// Check full type
-//		assertEquals("java.lang.Boolean",    getAttributeByName(entity_1, "myBoolean").getFullType());
-//		assertEquals("java.math.BigDecimal", getAttributeByName(entity_1, "myDecimal").getFullType());
-//		assertEquals("java.lang.Integer",    getAttributeByName(entity_1, "myInteger").getFullType());
-//		assertEquals("java.lang.String",     getAttributeByName(entity_1, "myString").getFullType());
-//		assertEquals("java.util.Date",       getAttributeByName(entity_1, "myDate").getFullType());
-//		assertEquals("java.util.Date",       getAttributeByName(entity_1, "myTime").getFullType());
-//		assertEquals("java.util.Date",       getAttributeByName(entity_1, "myTimestamp").getFullType());
-//		assertEquals("byte[]",               getAttributeByName(entity_1, "myBinary").getFullType());
-
 		// entity 2
-//		Entity entity_2 = getEntityByClassName(model, "domainEntity_2");
-		Entity entity_2 = model.getEntityByClassName("domainEntity_2");
-		assertEquals("domainEntity_2", entity_2.getClassName());
+		Entity entity2 = model.getEntityByClassName(ENTITY2);
+		assertEquals(ENTITY2, entity2.getClassName());
 		
 		// attributes of entity 2
-		assertTrue(entity_2.getAttributes().isEmpty());
+		assertTrue(entity2.getAttributes().isEmpty());
 	}
 
 	@Test
-	public void testAttributeWithAnnotations() { // throws AnnotationOrTagError {
+	public void testAttributeWithAnnotations() throws DslModelError {
 		DomainModel domainModel = new DomainModel(MODEL_FILE_NAME, MODEL_PROPERTIES);
-		DomainEntity domainEntity_1 = new DomainEntity("domainEntity_1");
+		DomainEntity domainEntity1 = new DomainEntity(ENTITY1);
 
-		domainModel.addEntity(domainEntity_1);
-		DomainField domainEntityField_1_1 = new DomainField("field_1_1", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-		DomainField domainEntityField_1_2 = new DomainField("field_1_2", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-		DomainField domainEntityField_1_3 = new DomainField("field_1_3", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-		DomainField domainEntityField_1_4 = new DomainField("field_1_4", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-		DomainField domainEntityField_1_5 = new DomainField("field_1_5", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-		DomainField domainEntityField_1_6 = new DomainField("field_1_6", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-		DomainField domainEntityField_1_7 = new DomainField("field_1_7", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-		DomainField domainEntityField_1_8 = new DomainField("field_1_8", DomainNeutralTypes.getType(DomainNeutralTypes.BOOLEAN));
-		domainEntity_1.addField(domainEntityField_1_1);
-		domainEntity_1.addField(domainEntityField_1_2);
-		domainEntity_1.addField(domainEntityField_1_3);
-		domainEntity_1.addField(domainEntityField_1_4);
-		domainEntity_1.addField(domainEntityField_1_5);
-		domainEntity_1.addField(domainEntityField_1_6);
-		domainEntity_1.addField(domainEntityField_1_7);
-		domainEntity_1.addField(domainEntityField_1_8);
-//		domainEntityField_1_1.addAnnotation(new DomainEntityFieldAnnotation("@Id"));
-//		domainEntityField_1_2.addAnnotation(new DomainEntityFieldAnnotation("@NotNull"));
-		domainEntityField_1_1.addAnnotation(new DomainAnnotation(AnnotationName.ID));
-		domainEntityField_1_2.addAnnotation(new DomainAnnotation(AnnotationName.NOT_NULL));
-//		domainEntityField_1_3.addAnnotation(new DomainEntityFieldAnnotation("@Min", "1"));
-//		domainEntityField_1_4.addAnnotation(new DomainEntityFieldAnnotation("@Max", "2"));
-		domainEntityField_1_3.addAnnotation(new DomainAnnotation(AnnotationName.MIN, new BigDecimal(1) ));
-		domainEntityField_1_4.addAnnotation(new DomainAnnotation(AnnotationName.MAX, new BigDecimal(25) ));
-//		domainEntityField_1_5.addAnnotation(new DomainEntityFieldAnnotation("@SizeMin", "3"));
-//		domainEntityField_1_6.addAnnotation(new DomainEntityFieldAnnotation("@SizeMax", "4"));
-		domainEntityField_1_5.addAnnotation(new DomainAnnotation(AnnotationName.SIZE_MIN, new Integer(3)  ));
-		domainEntityField_1_6.addAnnotation(new DomainAnnotation(AnnotationName.SIZE_MAX, new Integer(4)  ));
-//		domainEntityField_1_7.addAnnotation(new DomainEntityFieldAnnotation("@Past"));
-//		domainEntityField_1_8.addAnnotation(new DomainEntityFieldAnnotation("@Future"));
-		domainEntityField_1_7.addAnnotation(new DomainAnnotation(AnnotationName.PAST));
-		domainEntityField_1_8.addAnnotation(new DomainAnnotation(AnnotationName.FUTURE));
+		domainModel.addEntity(domainEntity1);
+		DomainField domainField1A = buildField("field_1_1", DomainNeutralTypes.BOOLEAN);
+		DomainField domainField1B = buildField("field_1_2", DomainNeutralTypes.BOOLEAN);
+		DomainField domainField1C = buildField("field_1_3", DomainNeutralTypes.BOOLEAN);
+		DomainField domainField1D = buildField("field_1_4", DomainNeutralTypes.BOOLEAN);
+		DomainField domainField1E = buildField("field_1_5", DomainNeutralTypes.BOOLEAN);
+		DomainField domainField1F = buildField("field_1_6", DomainNeutralTypes.BOOLEAN);
+		DomainField domainField1G = buildField("field_1_7", DomainNeutralTypes.BOOLEAN);
+		DomainField domainField1H = buildField("field_1_8", DomainNeutralTypes.BOOLEAN);
+		domainEntity1.addField(domainField1A);
+		domainEntity1.addField(domainField1B);
+		domainEntity1.addField(domainField1C);
+		domainEntity1.addField(domainField1D);
+		domainEntity1.addField(domainField1E);
+		domainEntity1.addField(domainField1F);
+		domainEntity1.addField(domainField1G);
+		domainEntity1.addField(domainField1H);
+		domainField1A.addAnnotation(new DomainAnnotation(AnnotationName.ID));
+		domainField1B.addAnnotation(new DomainAnnotation(AnnotationName.NOT_NULL));
+		domainField1C.addAnnotation(new DomainAnnotation(AnnotationName.MIN, new BigDecimal(1) ));
+		domainField1D.addAnnotation(new DomainAnnotation(AnnotationName.MAX, new BigDecimal(25) ));
+		domainField1E.addAnnotation(new DomainAnnotation(AnnotationName.SIZE_MIN, Integer.valueOf(3)  ));
+		domainField1F.addAnnotation(new DomainAnnotation(AnnotationName.SIZE_MAX, Integer.valueOf(4)  ));
+		domainField1G.addAnnotation(new DomainAnnotation(AnnotationName.PAST));
+		domainField1H.addAnnotation(new DomainAnnotation(AnnotationName.FUTURE));
 
-		DomainEntity domainEntity_2 = new DomainEntity("domainEntity_2");
-		domainModel.addEntity(domainEntity_2);
+		DomainEntity domainEntity2 = new DomainEntity(ENTITY2);
+		domainModel.addEntity(domainEntity2);
 
+		ModelConverter converter = getModelConverter();
 		Model model = converter.convertModel(domainModel);
 
 		assertEquals(2, model.getEntities().size());
 
 		// entity 1
-		//Entity entity_1 = getEntityByClassName(model, "domainEntity_1");
-		Entity entity_1 = model.getEntityByClassName("domainEntity_1");
-		assertEquals("domainEntity_1", entity_1.getClassName());
+		Entity entity1 = model.getEntityByClassName(ENTITY1);
+		assertEquals(ENTITY1, entity1.getClassName());
 
 		// attributes of entity 1
-		assertEquals(8, entity_1.getAttributes().size());
+		assertEquals(8, entity1.getAttributes().size());
 
-		Attribute attribute_1_1 = getAttributeByName(entity_1, "field_1_1");
-		Attribute attribute_1_2 = getAttributeByName(entity_1, "field_1_2");
-		Attribute attribute_1_3 = getAttributeByName(entity_1, "field_1_3");
-		Attribute attribute_1_4 = getAttributeByName(entity_1, "field_1_4");
-		Attribute attribute_1_5 = getAttributeByName(entity_1, "field_1_5");
-		Attribute attribute_1_6 = getAttributeByName(entity_1, "field_1_6");
-		Attribute attribute_1_7 = getAttributeByName(entity_1, "field_1_7");
-		Attribute attribute_1_8 = getAttributeByName(entity_1, "field_1_8");
+		Attribute attribute1A = getAttributeByName(entity1, "field_1_1");
+		Attribute attribute1B = getAttributeByName(entity1, "field_1_2");
+		Attribute attribute1C = getAttributeByName(entity1, "field_1_3");
+		Attribute attribute1D = getAttributeByName(entity1, "field_1_4");
+		Attribute attribute1E = getAttributeByName(entity1, "field_1_5");
+		Attribute attribute1F = getAttributeByName(entity1, "field_1_6");
+		Attribute attribute1G = getAttributeByName(entity1, "field_1_7");
+		Attribute attribute1H = getAttributeByName(entity1, "field_1_8");
 		
 		// boolean @Id 
-		assertTrue(attribute_1_1.isKeyElement());
+		assertTrue(attribute1A.isKeyElement());
 		
 		// boolean @NotNull => primitive type
-		assertTrue(attribute_1_2.isNotNull());
+		assertTrue(attribute1B.isNotNull());
 		
-		assertEquals(new BigDecimal( 1), attribute_1_3.getMinValue());
+		assertEquals(new BigDecimal( 1), attribute1C.getMinValue());
 		
-		assertEquals(new BigDecimal(25), attribute_1_4.getMaxValue());
+		assertEquals(new BigDecimal(25), attribute1D.getMaxValue());
 		
-		assertEquals(Integer.valueOf(3), attribute_1_5.getMinLength());
+		assertEquals(Integer.valueOf(3), attribute1E.getMinLength());
 		
-		assertEquals(Integer.valueOf(4), attribute_1_6.getMaxLength());
-		assertTrue(attribute_1_7.isDatePast());
-		assertTrue(attribute_1_8.isDateFuture());
+		assertEquals(Integer.valueOf(4), attribute1F.getMaxLength());
+		assertTrue(attribute1G.isDatePast());
+		assertTrue(attribute1H.isDateFuture());
 
 		// entity 2
-		Entity entity_2 = model.getEntityByClassName("domainEntity_2");
-		assertEquals("domainEntity_2", entity_2.getClassName());
+		Entity entity2 = model.getEntityByClassName(ENTITY2);
+		assertEquals(ENTITY2, entity2.getClassName());
 
 		// attributes of entity 2
-		assertTrue(entity_2.getAttributes().isEmpty());
+		assertTrue(entity2.getAttributes().isEmpty());
 	}
+	
+//	private DomainType getType(String typeName) {
+//		DomainType type = DomainNeutralTypes.getType(typeName);
+//		if ( type != null ) {
+//			return type;
+//		}
+//		else {
+//			throw new IllegalStateException("No type " + typeName);
+//		}
+//	}
 
-	private DomainModel buildFullModel() { // throws AnnotationOrTagError {
+	private DomainModel buildFullModel() throws DslModelError {
 		DomainModel domainModel = new DomainModel(MODEL_FILE_NAME, MODEL_PROPERTIES);
 
 		DomainEntity carEntity = new DomainEntity("Car");
@@ -262,31 +257,43 @@ public class ConverterTest {
 		DomainEntity groupEntity = new DomainEntity("Group");
 		
 		//--- "Driver" entity
-		DomainField driverCode = new DomainField("code", new DomainNeutralType("long"));
+//		DomainField driverCode = new DomainField("code", getType("long"));
+		DomainField driverCode = buildField("code", DomainNeutralTypes.LONG);
 		driverCode.addAnnotation(new DomainAnnotation(AnnotationName.ID));
-		driverCode.addAnnotation(new DomainAnnotation(AnnotationName.SIZE_MAX, new Integer(20) ));
-		//driverCode.setAnnotationList(annotationList);
+		driverCode.addAnnotation(new DomainAnnotation(AnnotationName.SIZE_MAX, Integer.valueOf(20) ));
 		driverEntity.addField(driverCode);
 		
-		driverEntity.addField( new DomainField("firstName", new DomainNeutralType("string") ) );
-		driverEntity.addField( new DomainField("lastName",  new DomainNeutralType("string") ) );
-		driverEntity.addField( new DomainField(0, "car",  new DomainEntityType("Car") , 1 ) );
+//		driverEntity.addField( new DomainField("firstName", getType("string") ) );
+		driverEntity.addField( buildField("firstName", DomainNeutralTypes.STRING) );
+		
+//		driverEntity.addField( new DomainField("lastName",  getType("string") ) );
+		driverEntity.addField( buildField("lastName", DomainNeutralTypes.STRING ) );
+
+//		driverEntity.addField( new DomainField(0, "car",  new DomainEntityType("Car") , 1 ) );
+		driverEntity.addField( buildField("car", "Car" ) );
 
 		//--- "Car" entity referencing "Driver" entity
-		DomainField carId = new DomainField("id",     new DomainNeutralType("short") );
+//		DomainField carId = new DomainField("id",     getType("short") );
+		DomainField carId = buildField("id", DomainNeutralTypes.SHORT) ;
 		carId.addAnnotation(new DomainAnnotation(AnnotationName.ID));
 		carEntity.addField(carId);
 		
-		carEntity.addField(new DomainField("name",   new DomainNeutralType("string")) );
-		carEntity.addField(new DomainField("driver", new DomainEntityType("Driver")) ); // Reference to "Driver"
+//		carEntity.addField(new DomainField("name",   getType("string")) );
+		carEntity.addField(buildField("name",  DomainNeutralTypes.STRING) );
+
+//		carEntity.addField(new DomainField("driver", new DomainEntityType("Driver")) ); // Reference to "Driver"
+		carEntity.addField(buildField("driver", "Driver") ); // Reference to "Driver"
 		
 		//--- "Group" entity referencing N "Driver" entity
-		DomainField groupId = new DomainField("id",     new DomainNeutralType("int"));
+//		DomainField groupId = new DomainField("id",     getType("int"));
+		DomainField groupId = buildField("id",  DomainNeutralTypes.INTEGER);
 		groupId.addAnnotation(new DomainAnnotation(AnnotationName.ID));
 		groupEntity.addField(groupId);
 		
-		groupEntity.addField(new DomainField("name",   new DomainNeutralType("string")) );
-		groupEntity.addField(new DomainField(0, "drivers", new DomainEntityType("Driver"), -1) ); // Reference to "Driver"
+//		groupEntity.addField(new DomainField("name",   getType("string")) );
+		groupEntity.addField(buildField("name", DomainNeutralTypes.STRING) );
+//		groupEntity.addField(new DomainField(0, "drivers", new DomainEntityType("Driver"), -1) ); // Reference to "Driver"
+		groupEntity.addField(buildFieldMany("drivers", "Driver") ); // Reference to "Driver"
 		
 		//--- Add entities to model
 		domainModel.addEntity(carEntity);
@@ -305,60 +312,19 @@ public class ConverterTest {
 	}
 	
 	@Test
-	public void testFullModel() { // throws AnnotationOrTagError {
+	public void testFullModel() throws DslModelError {
 		DomainModel domainModel = buildFullModel() ;
+		ModelConverter converter = getModelConverter();
 		Model model = converter.convertModel(domainModel);
 		
 		//--- "Car" entity
 		checkCarEntity((DslModelEntity) model.getEntityByClassName("Car"));
 		
 		//--- "Driver" entity
-//		GenericEntity driverEntity = (GenericEntity) model.getEntityByClassName("Driver");
-//		//assertNull( entity_2.getDatabaseTable());
-//		assertEquals("Driver", driverEntity.getDatabaseTable() );
 		checkDriverEntity((DslModelEntity) model.getEntityByClassName("Driver"));
 		
 		//--- "Group" entity
 		checkGroupEntity((DslModelEntity) model.getEntityByClassName("Group"));
-
-//		GenericEntity carEntity = (GenericEntity) model.getEntityByClassName("Car");
-//		assertEquals("Car", carEntity.getClassName());
-//		for ( Attribute attribute : carEntity.getAttributes() ) {
-//			System.out.println(" . " + attribute.getName() );
-//		}
-//		assertEquals(3, carEntity.getAttributes().size() );
-//		assertNotNull(carEntity.getAttributeByName("id"));
-//		assertNotNull(carEntity.getAttributeByName("name"));
-//		assertNotNull(carEntity.getAttributeByName("driver"));
-//
-//		//--- "Car" - "name" attribute
-//		Attribute car_nameAttribute = carEntity.getAttributeByName("name");
-//		assertNotNull(car_nameAttribute);
-//		assertEquals("string", car_nameAttribute.getNeutralType() );
-//		assertFalse(car_nameAttribute.isFK()); 
-//		assertFalse(car_nameAttribute.isFKSimple()); 
-//		assertFalse(car_nameAttribute.isFKComposite());
-//		
-//		//--- "Car" - "driver" attribute ( "pseudo FK" )
-//		Attribute car_driverAttribute = carEntity.getAttributeByName("driver");
-//		assertNotNull(car_driverAttribute);
-//		assertEquals("long", car_driverAttribute.getNeutralType() );
-//		//assertEquals("driverCode", driverAttribute.getLabel() ); // "driver" --> "driverCode" TODO ?
-//		assertEquals(Integer.valueOf(20), car_driverAttribute.getMaxLength() );
-		
-//		//Attribute driverFK = carEntity.getAttributeByName("driver"); // Reference to "Driver"
-//		//assertNotNull(driverFK);
-//		assertEquals("long", car_driverAttribute.getNeutralType() ); // same as original attribute
-//		assertEquals(car_driverAttribute.getName(), car_driverAttribute.getLabel() ); 
-//		assertEquals(Integer.valueOf(20), car_driverAttribute.getMaxLength() ); // same as original attribute
-//		
-//		assertTrue(car_driverAttribute.isFK()); // is "FK"
-//		assertTrue(car_driverAttribute.isFKSimple()); // is "Simple FK" (is the only attribute in the FK)
-//		assertFalse(car_driverAttribute.isFKComposite());
-//		
-//		//--- "Car" links
-//		assertEquals(1, carEntity.getLinks().size());
-//		assertEquals("Driver", carEntity.getLinks().get(0).getTargetEntityClassName());
 
 		//--- Get by class name
 		assertNotNull(model.getEntityByClassName("Car"));
@@ -367,7 +333,6 @@ public class ConverterTest {
 		//--- Get by table name ( table name = class name )
 		assertNotNull(model.getEntityByTableName("Car"));
 		assertNotNull(model.getEntityByTableName("Driver"));
-		
 	}
 	
 	/**
@@ -376,14 +341,14 @@ public class ConverterTest {
 	 */
 	private void checkCarEntity(DslModelEntity carEntity) {
 
-		System.out.println("check 'Car' entity...");
+		print("check 'Car' entity...");
 		
 		assertEquals("Car", carEntity.getClassName());
 		assertEquals("Car", carEntity.getDatabaseTable() );
 		
 		//--- "Car" attributes
 		for ( Attribute attribute : carEntity.getAttributes() ) {
-			System.out.println(" . " + attribute.getName() );
+			print(" . " + attribute.getName() );
 		}
 		assertEquals(2, carEntity.getAttributes().size() );
 		assertNotNull(carEntity.getAttributeByName("id"));
@@ -391,26 +356,12 @@ public class ConverterTest {
 		//assertNotNull(carEntity.getAttributeByName("driver")); // LINK
 
 		//--- "Car" - "name" attribute
-		Attribute car_nameAttribute = carEntity.getAttributeByName("name");
-		assertNotNull(car_nameAttribute);
-		assertEquals("string", car_nameAttribute.getNeutralType() );
-		assertFalse(car_nameAttribute.isFK()); 
-		assertFalse(car_nameAttribute.isFKSimple()); 
-		assertFalse(car_nameAttribute.isFKComposite());
-		
-//		//--- "Car" - "driver" attribute ( "pseudo FK" )
-//		Attribute car_driverAttribute = carEntity.getAttributeByName("driver");
-//		assertNotNull(car_driverAttribute);
-//		assertEquals("long", car_driverAttribute.getNeutralType() );
-//		//assertEquals("driverCode", driverAttribute.getLabel() ); // "driver" --> "driverCode" TODO ?
-//		assertEquals(Integer.valueOf(20), car_driverAttribute.getMaxLength() );
-//		assertEquals("long", car_driverAttribute.getNeutralType() ); // same as original attribute
-//		assertEquals(car_driverAttribute.getName(), car_driverAttribute.getLabel() ); 
-//		assertEquals(Integer.valueOf(20), car_driverAttribute.getMaxLength() ); // same as original attribute
-//		
-//		assertTrue(car_driverAttribute.isFK()); // is "FK"
-//		assertTrue(car_driverAttribute.isFKSimple()); // is "Simple FK" (is the only attribute in the FK)
-//		assertFalse(car_driverAttribute.isFKComposite());
+		Attribute attribute = carEntity.getAttributeByName("name");
+		assertNotNull(attribute);
+		assertEquals("string", attribute.getNeutralType() );
+		assertFalse(attribute.isFK()); 
+		assertFalse(attribute.isFKSimple()); 
+		assertFalse(attribute.isFKComposite());
 		
 		//--- "Car" links
 		assertEquals(1, carEntity.getLinks().size()); 
@@ -418,7 +369,6 @@ public class ConverterTest {
 		Link driverLink = carEntity.getLinks().get(0);
 		assertEquals(Cardinality.MANY_TO_ONE, driverLink.getCardinality() );
 		assertEquals("Driver", driverLink.getTargetEntityClassName());
-		
 	}
 	
 	/**
@@ -426,14 +376,13 @@ public class ConverterTest {
 	 * @param driverEntity
 	 */
 	private void checkDriverEntity(DslModelEntity driverEntity) {
-		System.out.println("check 'Driver' entity...");
+		print("check 'Driver' entity...");
 		assertEquals("Driver", driverEntity.getClassName() );
 		assertEquals("Driver", driverEntity.getDatabaseTable() );
 		//--- Attributes
 		for ( Attribute attribute : driverEntity.getAttributes() ) {
-			System.out.println(" . " + attribute.getName() );
+			print(" . " + attribute.getName() );
 		}
-
 		//--- Links
 		assertEquals(1, driverEntity.getLinks().size());
 		Link car = driverEntity.getLinks().get(0);
@@ -446,13 +395,13 @@ public class ConverterTest {
 	 * @param groupEntity
 	 */
 	private void checkGroupEntity(DslModelEntity groupEntity) {
-		System.out.println("check 'Group' entity...");
+		print("check 'Group' entity...");
 		assertEquals("Group", groupEntity.getClassName() );
 		assertEquals("Group", groupEntity.getDatabaseTable() );
 		
 		//--- Attributes
 		for ( Attribute attribute : groupEntity.getAttributes() ) {
-			System.out.println(" . " + attribute.getName() );
+			print(" . " + attribute.getName() );
 		}
 
 		assertEquals(2, groupEntity.getAttributes().size() ); // "drivers" is not a "pseudo FK attribute" => not in attributes list
@@ -491,6 +440,6 @@ public class ConverterTest {
 				return attribute;
 			}
 		}
-		return null;
+		throw new IllegalStateException("Attribute '" + name + "' not found");
 	}
 }
